# id-photo-maker-backend-python

./: .dockerignore  .gitignore  Dockerfile  conftest.py  docker-compose.yml  download-models.sh  entrypoint.sh  main.py  pyproject.toml
.github/workflows/: ci.yml
src/: config.py  server.py
src/services/: exact_crop_service.py  face_detect_orchestrator.py  face_detection_service.py  image_processing_orchestrator.py  image_scaling.py  image_validation.py  print_layout_service.py  u2net_service.py
src/types/: index.py
src/utils/: crop_area_calculation.py  dpi_calculation.py  layout_calculation.py
tests/: test_face_detect_orchestrator.py  test_image_processing_orchestrator.py  test_server.py  test_utils.py
